[package]
name = "provn-sdk"
version = "0.1.0"
edition = "2021"
description = "Client-side SDK for signing and verifying Provncloud claims"
license = "MIT"

[features]
default = ["std"]
std = ["ed25519-dalek/std", "serde/std", "serde_json/std", "hex/std", "rand/std"]
alloc = ["serde/alloc", "serde_json/alloc", "hex/alloc", "ed25519-dalek/alloc", "rand/alloc"]

[dependencies]
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core", "serde"] }
rand = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
hex = { version = "0.4", default-features = false }
sha2 = { version = "0.10", default-features = false }
